# LearningDirectX12

./: .gitignore  .gitmodules  CMakeLists.txt
DX12Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp
DX12Renderer/DX12/: CMakeLists.txt  DX12Renderer.cpp  DX12Renderer.hpp
Dependencies/: CMakeLists.txt
MyTesting/: CMakeLists.txt  main.cpp
Tutorial2/inc/: Tutorial2.h
